plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version "0.19.2"
}

group = 'com.ed'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    avroTools
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://packages.confluent.io/maven")
    }
}

dependencies {
    // Spring Boot Starters
    implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
    implementation "io.micrometer:micrometer-registry-prometheus:${prometheusVersion}"

    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"

    // Spring Cloud
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:${springCloudVersion}"
    implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:${springCloudVersion}")

    // Database
    runtimeOnly "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"

    // Kafka
    implementation "org.springframework.kafka:spring-kafka:${springKafkaVersion}"
    implementation "io.confluent:kafka-avro-serializer:${kafkaAvroSerializerVersion}"
    avroTools "org.apache.avro:avro-tools:${avroToolsVersion}"

    // API Documentation
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenapiVersion}"

    // Utilities
    implementation "com.google.code.gson:gson:${gsonVersion}"

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Testing
    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    testImplementation "org.springframework.kafka:spring-kafka-test:${springKafkaVersion}"
    testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:${springRestdocsVersion}"
    testImplementation "com.epages:restdocs-api-spec-mockmvc:${restdocsApiSpecVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"
}


tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add('-parameters')
}

sourceSets {
    main {
        java {
            srcDir 'build/generated-src'
        }
    }
}


tasks.register("generateAvroJava", JavaExec) {
    group = "build"
    description = "Compiles Avro schemas into Java classes"
    mainClass.set("org.apache.avro.tool.Main")
    classpath = configurations.avroTools
    args = [
            "compile", "-string", "schema",
            "src/main/avro/order_payment_create_request.avsc",
            "src/main/avro/order_payment_cancel_request.avsc",
            "build/generated-src"
    ]
}

tasks.named("compileJava") {
    dependsOn("generateAvroJava")
}

